--- a/iron/ironel/ironel.csproj
+++ b/iron/ironel/ironel.csproj
@@ -42,10 +42,33 @@
   -->
   <ItemGroup>
     <Compile Include="alloc.cs" />
+    <Compile Include="buffer.cs" />
+    <Compile Include="bytecode.cs" />
+    <Compile Include="character.cs" />
     <Compile Include="data.cs" />
+    <Compile Include="defs.cs" />
+    <Compile Include="dispextern.cs" />
+    <Compile Include="dispnew.cs" />
+    <Compile Include="doc.cs" />
+    <Compile Include="eval.cs" />
+    <Compile Include="fns.cs" />
+    <Compile Include="font.cs" />
+    <Compile Include="frame.cs" />
+    <Compile Include="indent.cs" />
     <Compile Include="interval.cs" />
+    <Compile Include="keyboard.cs" />
+    <Compile Include="lisp_h.cs" />
     <Compile Include="lisp_object.cs" />
     <Compile Include="lread.cs" />
+    <Compile Include="marker.cs" />
+    <Compile Include="print.cs" />
+    <Compile Include="region_cache.cs" />
+    <Compile Include="search.cs" />
+    <Compile Include="term.cs" />
+    <Compile Include="termhooks.cs" />
+    <Compile Include="w32fns.cs" />
+    <Compile Include="w32term.cs" />
+    <Compile Include="xdisp.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
