--- a/iron/ironel/ironel.csproj
+++ b/iron/ironel/ironel.csproj
@@ -44,12 +44,16 @@
     <Compile Include="alloc.cs" />
     <Compile Include="buffer.cs" />
     <Compile Include="bytecode.cs" />
+    <Compile Include="callint.cs" />
     <Compile Include="character.cs" />
+    <Compile Include="commands.cs" />
     <Compile Include="data.cs" />
     <Compile Include="defs.cs" />
     <Compile Include="dispextern.cs" />
     <Compile Include="dispnew.cs" />
     <Compile Include="doc.cs" />
+    <Compile Include="doprnt.cs" />
+    <Compile Include="emacs.cs" />
     <Compile Include="eval.cs" />
     <Compile Include="fns.cs" />
     <Compile Include="font.cs" />
@@ -60,6 +64,7 @@
     <Compile Include="lisp_h.cs" />
     <Compile Include="lisp_object.cs" />
     <Compile Include="lread.cs" />
+    <Compile Include="macros.cs" />
     <Compile Include="marker.cs" />
     <Compile Include="print.cs" />
     <Compile Include="region_cache.cs" />
